--- a/COMP422_Proj_P3/.classpath
+++ b/COMP422_Proj_P3/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/weka-dev-3.7.6-sources.jar"/>
 	<classpathentry kind="lib" path="lib/weka-dev-3.7.6.jar" sourcepath="lib/weka-dev-3.7.6-sources.jar"/>
+	<classpathentry kind="lib" path="lib/weka.jar"/>
+	<classpathentry kind="lib" path="lib/pentaho.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
